2008-10-24  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodegenerator.vala:
	* gobject/valadbusclientmodule.vala:
	* gobject/valadbusservermodule.vala:

	Split DBusModule into DBusClientModule and DBusServerModule

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodearraymodule.vala:
	* gobject/valaccodeassignmentmodule.vala:
	* gobject/valaccodeelementaccessmodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionmodule.vala:
	* gobject/valaccodememberaccessmodule.vala:
	* gobject/valaccodemethodmodule.vala:
	* gobject/valaccodemodule.vala:
	* gobject/valadbusmodule.vala:

	Move get_array_length_cname and get_array_length_cexpression to
	CCodeArrayModule

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagirparser.vala:

	Support virtual methods

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagirparser.vala:

	Support methods throwing errors

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagirparser.vala:

	Support shared namespaces

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* vapi/*.vapi:

	Regenerate bindings

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala:

	Sort output to allow comparison of generated vapi files

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagirparser.vala:

	Recognize goffset

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* vala/valanamespace.vala:
	* vapigen/valagirparser.vala:

	Remove Class and Iface structs

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodegeneratorsourcefile.vala:
	* gobject/valaccodemodule.vala:

	Move visit_source_file to CCodeBaseModule

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodemodule.vala:
	* gobject/valaccodestructmodule.vala:

	Add CCodeStructModule

2008-10-24  Jürg Billeter  <j@bitron.ch>
