@@ -1,3 +1,12 @@
+2008-10-25  Jürg Billeter  <j@bitron.ch>
+
+	* tests/exceptions.exp:
+	* tests/exceptions.vala:
+	* tests/testrunner.sh:
+	* vapi/Makefile.am:
+
+	Remove libgee test to avoid conflict in vapidir
+
 2008-10-24  Jürg Billeter  <j@bitron.ch>
 
 	* gobject/Makefile.am:
